# easy_queue

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: main.rs
src/web/: mod.rs  queue_endpoints.rs  response.rs
tests/: queue_tests.rs
