[package]
name = "easy_queue"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "easy_queue"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.39.2", features = ["full"] }
axum = "0.7.5"
serde = { version = "1.0.207", features = ["derive"] }
tracing-subscriber = "0.3.18"
httpc-test = "0.1.10"
anyhow = "1.0.86"
serde_json = "1.0.125"
tracing = "0.1"
